--- a/index.css
+++ b/index.css
@@ -7,5 +7,6 @@ body {
 main {
     background-color: #fff;
     width: 1200px;
-    margin: 5rem auto;
+    margin: 10rem auto;
+    padding: 4.5rem;
 }
