--- a/index.css
+++ b/index.css
@@ -8,5 +8,9 @@ main {
     background-color: #fff;
     width: 1200px;
     margin: 10rem auto;
-    padding: 4.5rem;
+    /* padding: 4.5rem; */
+}
+
+h1 {
+    margin: 0;
 }
