--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ main {
     background-color: #fff;
     width: 1200px;
     margin: 10rem auto;
-    /* padding: 4.5rem; */
+    padding: 4.2rem;
 }
 
 h1 {
