--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@ main {
 }
 
 .link-container {
-    /* display: flex; */
+    display: flex;
     /* gap: 1rem; */
     /* align-items: center; */
 }
