--- a/index.css
+++ b/index.css
@@ -14,7 +14,7 @@ main {
 .link-container {
     display: flex;
     gap: 1rem;
-    /* align-items: center; */
+    align-items: center;
 }
 h1 {
     /* margin: 0; */
