--- a/index.css
+++ b/index.css
@@ -39,7 +39,7 @@ a {
 }
 
 .box {
-    /* background-color: green; */
+    background-color: green;
     /* aspect-ratio: 1/1; */
     /* width: 22px; */
 
