--- a/index.css
+++ b/index.css
@@ -14,6 +14,13 @@ main {
     border-radius: .8rem;
 }
 
+.first-container {
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* flex: .6; */
+    /* height: 100%; */
+}
+
 .link-container {
     display: flex;
     gap: 1rem;
