--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@ main {
 }
 
 .first-container {
-    /* display: flex; */
+    display: flex;
     /* flex-direction: column; */
     /* flex: .6; */
     /* height: 100%; */
