--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@ main {
 .first-container {
     display: flex;
     flex-direction: column;
-    /* flex: .6; */
+    flex: .6;
     /* height: 100%; */
 }
 
