--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@ main {
     display: flex;
     flex-direction: column;
     flex: .6;
-    /* height: 100%; */
+    height: 100%;
 }
 
 .link-container {
