--- a/index.css
+++ b/index.css
@@ -29,9 +29,10 @@ main {
 h1 {
     margin: 0;  
     font-weight: 400;
+    font-size: 4rem;
 }
 p {
-    font-size:  20px;
+    font-size:  2rem;
 }
 
 a {
