--- a/index.css
+++ b/index.css
@@ -44,12 +44,14 @@ a {
 .second-container {
     display: flex;  
     flex: 1; 
-    gap: 2rem;
+    /* flex-wrap: wrap; */
+    gap: 1rem;
 }
 
 .box {
     width: 30%;
     background-color: green;
     aspect-ratio: 1/1;
+    /* border-radius: .5rem; */
 
 }
