--- a/index.css
+++ b/index.css
@@ -44,7 +44,7 @@ a {
 .second-container {
     display: flex;  
     flex: 1; 
-    /* flex-wrap: wrap; */
+    flex-wrap: wrap;
     gap: 1rem;
 }
 
