--- a/index.css
+++ b/index.css
@@ -52,6 +52,6 @@ a {
     width: 30%;
     background-color: green;
     aspect-ratio: 1/1;
-    /* border-radius: .5rem; */
+    border-radius: .5rem;
 
 }
