--- a/index.css
+++ b/index.css
@@ -18,13 +18,15 @@ main {
     display: flex;
     flex-direction: column;
     flex: .6;
-    height: 100%;
 }
 
-.link-container {
+a {
     display: flex;
     gap: 1rem;
     align-items: center;
+    /* text-decoration: none; */
+    /* color: green; */
+    /* margin-top: auto; */
 }
 h1 {
     margin: 0;  
@@ -35,11 +37,6 @@ p {
     font-size:  2rem;
 }
 
-a {
-    font-size: 20px;
-    color:  #406A29;
-    text-decoration: none;
-}
 
 .second-container {
     display: flex;  
