--- a/index.css
+++ b/index.css
@@ -25,7 +25,7 @@ a {
     gap: 1rem;
     align-items: center;
     text-decoration: none;
-    /* color: green; */
+    color: green;
     /* margin-top: auto; */
 }
 h1 {
