--- a/index.css
+++ b/index.css
@@ -26,7 +26,7 @@ a {
     align-items: center;
     text-decoration: none;
     color: green;
-    /* margin-top: auto; */
+    margin-top: auto;
 }
 h1 {
     margin: 0;  
