--- a/index.css
+++ b/index.css
@@ -62,8 +62,8 @@ p {
     background-image: url('./dram-2.jpeg');
     background-size: cover;
 }
-.box:nth-of-type() {
-
+.box:nth-of-type(3) {
+    background-color: #D0E1BB;
 }
 .box:nth-of-type(1) {
     /* background-image: url('./dram-1.jpeg'); */
