--- a/index.css
+++ b/index.css
@@ -66,6 +66,5 @@ p {
     background-color: #D0E1BB;
 }
 .box:nth-of-type(4) {
-    /* background-image: url('./dram-1.jpeg'); */
-    /* background-size: cover; */
+    background-color:  #fff;
 }
