adding background color

--- a/index.css
+++ b/index.css
@@ -72,6 +72,6 @@ p {
     background-color: #BBC8E1;
 }
 .box:nth-of-type(6) {
-    /* background-image: url('./dram-2.jpeg'); */
+    background-image: url('./dram-3.jpeg');
     /* background-size: cover; */
 }
