adding background size

--- a/index.css
+++ b/index.css
@@ -73,5 +73,5 @@ p {
 }
 .box:nth-of-type(6) {
     background-image: url('./dram-3.jpeg');
-    /* background-size: cover; */
+    background-size: cover;
 }
