--- a/index.css
+++ b/index.css
@@ -12,6 +12,7 @@ main {
     display: flex;
     gap: 13.5rem;
     border-radius: .8rem;
+    /* flex-direction: column; */
 }
 
 .first-container {
