--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ body {
 
 main {
     background-color: #fff;
-    width: 1200px;
+    width: 100%;
     margin: 10rem auto;
     padding: 4.2rem;
     display: flex;
