--- a/index.css
+++ b/index.css
@@ -10,6 +10,7 @@ main {
     margin: 10rem auto;
     padding: 4.2rem;
     display: flex;
+    box-sizing: border-box;
     gap: 13.5rem;
     border-radius: .8rem;
     flex-direction: column;
