--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ main {
     background-color: #fff;
     width: 100%;
     margin: 10rem auto;
-    padding: 4.2rem;
+    padding-left: 2rem;
     display: flex;
     box-sizing: border-box;
     gap: 13.5rem;
