--- a/index.css
+++ b/index.css
@@ -8,12 +8,13 @@ main {
     background-color: #fff;
     width: 100%;
     margin: 10rem auto;
+    padding-top: 2.5rem;
     padding-left: 2rem;
     padding-right: 2rem;
     padding-bottom: 6.5rem;
     display: flex;
     box-sizing: border-box;
-    /* gap: 13.5rem; */
+    gap: 2.7rem;
     border-radius: 8px;
     flex-direction: column;
 }
