--- a/index.css
+++ b/index.css
@@ -45,13 +45,13 @@ p {
 
 .second-container {
     display: grid;  
-    flex: 1; 
-    flex-wrap: wrap;
+    /* grid-template-columns: 1fr 1fr; */
+    /* grid-template-rows: 1fr 1fr; */
     gap: 1rem;
 }
 
 .box {
-    width: 30%;
+    /* width: 100%; */
     background-color: green;
     aspect-ratio: 1/1;
     border-radius: .5rem;
