--- a/index.css
+++ b/index.css
@@ -46,7 +46,7 @@ p {
 .second-container {
     display: grid;  
     grid-template-columns: 1fr 1fr;
-    /* grid-template-rows: 1fr 1fr; */
+    grid-template-rows: 1fr 1fr;
     gap: 1rem;
 }
 
