--- a/index.css
+++ b/index.css
@@ -51,7 +51,7 @@ p {
 }
 
 .box {
-    /* width: 100%; */
+    width: 100%;
     background-color: green;
     aspect-ratio: 1/1;
     border-radius: .5rem;
