--- a/index.css
+++ b/index.css
@@ -95,12 +95,29 @@ p {
     .box:nth-of-type(5) {
         display: block;
     }
-
-    main {
-        padding: 4rem;
+    body {
+        margin-left:  4rem;
+        margin-right:  4rem;
     }
-    
 }
- @media only  screen and (min-width: 800px) {
+ @media only  screen and (min-width: 1200px) {
+    main {
+        flex-direction: row;
+        padding: 4rem;
+
+    }
+    .second-container {
+        flex: 1;
+    }
+    p {
+        margin-bottom: 0;
+        margin-top: 0;
+    }
+     
+    h1 {
+        margin-bottom: 1.5rem;
+    }
+
+    
     
  }
